# watonomous-asd-training

./: watod-config.sh
src/robot/control/: CMakeLists.txt
src/robot/control/config/: params.yaml
src/robot/control/include/: control_core.hpp  control_node.hpp
src/robot/control/src/: control_core.cpp  control_node.cpp
src/robot/costmap/: CMakeLists.txt
src/robot/costmap/config/: params.yaml
src/robot/costmap/include/: costmap_core.hpp  costmap_node.hpp
src/robot/costmap/src/: costmap_core.cpp  costmap_node.cpp
src/robot/map_memory/: CMakeLists.txt
src/robot/map_memory/config/: params.yaml
src/robot/map_memory/include/: map_memory_core.hpp  map_memory_node.hpp
src/robot/map_memory/src/: map_memory_core.cpp  map_memory_node.cpp
src/robot/odometry_spoof/: CMakeLists.txt
src/robot/odometry_spoof/include/: odometry_spoof.hpp
src/robot/odometry_spoof/src/: odometry_spoof.cpp
src/robot/planner/: CMakeLists.txt
src/robot/planner/config/: params.yaml
src/robot/planner/include/: planner_core.hpp  planner_node.hpp
src/robot/planner/src/: planner_core.cpp  planner_node.cpp
